# rxec

./: Cargo.toml  README.md  rustfmt.toml
core/: Cargo.toml
core/src/: basic.rs  future.rs  lib.rs  list.rs  traits.rs  tuple_list.rs  util.rs
core/src/basic/: arc.rs  place.rs  slot.rs
core/src/util/: and_then.rs  future.rs  map.rs  value.rs  wait.rs
util/: Cargo.toml
util/src/: lib.rs  sender.rs
util/src/sender/: bind.rs  eager.rs  join.rs  join_all.rs  join_tuple.rs  map.rs  sched.rs  sched_on.rs  select.rs  transfer.rs  value.rs  wait.rs
util/src/sender/join_tuple/: aux.rs
