[workspace]
members = ["core", "util"]
resolver = "3"

[workspace.package]
authors = ["Js2xxx <development2014@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Local crates
rxec-core = {path = "core", default-features = false}
rxec-util = {path = "util", default-features = false}
# External crates
either = {version = "1.9", default-features = false}
either-slot = {version = "1.2"}
oneshot = {version = "0.1", default-features = false, features = ["async"]}
pin-project = {version = "1.1"}
spin = "0.9"
tuple_list = {version = "0.1", default-features = false}
