[workspace]
members = [
  "core", #   "util",
]
resolver = "3"

[workspace.package]
authors = ["Js2xxx <development2014@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Local crates
rxec-core = {path = "core", default-features = false}
# External crates
oneshot = {version = "0.1", default-features = false, features = ["async"]}
pin-project = {version = "1.1"}
placid = {git = "https://github.com/js2xxx/placid.git"}
spin = "0.10"
thiserror = "2.0"
tsum = {git = "https://github.com/js2xxx/tsum.git"}
tuple_list = {version = "0.1", default-features = false}
