[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "rxec-core"
version.workspace = true

[features]
default = ["std"]
std = ["oneshot/std"]

[dependencies]
oneshot.workspace = true
pin-project.workspace = true
placid.workspace = true
spin.workspace = true
thiserror.workspace = true
tsum.workspace = true
