[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "rxec-util"
version.workspace = true

[features]
alloc = ["dep:oneshot", "dep:either-slot", "rxec-core/alloc"]
default = ["std"]
std = ["alloc", "oneshot/std"]

[dependencies]
# Local crates
rxec-core.workspace = true
# External crates
either-slot = {workspace = true, optional = true}
either.workspace = true
oneshot = {workspace = true, optional = true}
pin-project = {version = "1.1"}
spin.workspace = true
tuple_list.workspace = true
